Initial commit with the first simple example